--- a/imprint.html
+++ b/imprint.html
@@ -54,9 +54,9 @@
     
     <h2>Angaben gemäß § 5 TMG</h2>
     <p>
-      Christian Hübbe<br>
-      [Deine Straße und Hausnummer]<br>
-      [PLZ] [Ort]<br>
+      <strong>Christian Hübbe</strong><br>
+      Kurt-Schumacher-Straße 76<br>
+      67663 Kaiserslautern<br>
       Deutschland
     </p>
 
@@ -65,32 +65,42 @@
       Email: <a href="mailto:christian@huebbedigital.com">christian@huebbedigital.com</a>
     </p>
 
+    <h2>Umsatzsteuer-ID</h2>
+    <p>Keine Angabe erforderlich (Kleinunternehmer gemäß § 19 UStG).</p>
+
     <h2>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</h2>
+    <p>Christian Hübbe, Anschrift wie oben</p>
+
+    <h2>Apps und Projekte</h2>
     <p>
-      Christian Hübbe<br>
-      [Deine Adresse]
+      <strong>FairwayService</strong> – Golf-Club Management App (iOS & Android)<br>
+      <strong>NotAlone</strong> – Sicherheits-App (iOS & Android)
     </p>
 
-    <h2>Haftungsausschluss</h2>
-    
+    <h2>Haftung für Inhalte</h2>
     <p>
-      <strong>Haftung für Inhalte:</strong><br>
-      Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. 
-      Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte 
-      können wir jedoch keine Gewähr übernehmen.
+      Als Diensteanbieter bin ich gemäß § 7 Abs. 1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich.
+      Nach §§ 8 bis 10 TMG bin ich als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen
+      oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen.
+    </p>
+    <p>
+      Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt.
+      Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden
+      von entsprechenden Rechtsverletzungen werde ich diese Inhalte umgehend entfernen.
     </p>
 
+    <h2>Haftung für Links</h2>
     <p>
-      <strong>Haftung für Links:</strong><br>
-      Unser Angebot enthält Links zu externen Webseiten Dritter. 
-      Für die Inhalte der verlinkten Seiten ist stets der jeweilige 
-      Anbieter verantwortlich.
+      Mein Angebot enthält Links zu externen Webseiten Dritter, auf deren Inhalte ich keinen Einfluss habe. Deshalb kann ich für diese fremden Inhalte
+      auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber verantwortlich.
     </p>
 
+    <h2>Urheberrecht</h2>
     <p>
-      <strong>Urheberrecht:</strong><br>
-      Die Inhalte und Werke auf diesen Seiten unterliegen dem deutschen 
-      Urheberrecht.
+      Die durch den Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht.
+      Beiträge Dritter sind als solche gekennzeichnet. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung
+      außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers.
+      Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet.
     </p>
 
     <p style="margin-top:40px; padding-top:24px; border-top:1px solid var(--border); font-size:14px">
