--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
   <header>
     <div class="container">
       <nav class="nav">
-        <a href="/" class="brand">Christian Hübbe</a>
+        <a href="/" class="brand">Huebbe Digital</a>
         <ul>
           <li><a href="#work">Work</a></li>
           <li><a href="#about">About</a></li>
@@ -518,7 +518,7 @@
 
         <div class="portfolio-grid">
           <!-- FairwayService -->
-          <a href="/fairwayservice/" class="project">
+          <a href="/fairwayservice.html" class="project">
             <div class="project-header">
               <div class="project-icon">🏌️</div>
               <div class="project-title">
@@ -546,7 +546,7 @@
           </a>
 
           <!-- NotAlone -->
-          <a href="/notalone/" class="project">
+          <a href="/notalone.html" class="project">
             <div class="project-header">
               <div class="project-icon">🆘</div>
               <div class="project-title">
