--- a/notalone.html
+++ b/notalone.html
@@ -144,10 +144,25 @@
     }
 
     .hero-icon {
-      font-size: 80px;
-      margin-bottom: 24px;
-      display: inline-block;
-      filter: drop-shadow(0 4px 12px rgba(0, 0, 0, 0.08));
+      width: 80px;
+      height: 80px;
+      margin: 0 auto 32px;
+      background: linear-gradient(135deg, #EF4444, #DC2626);
+      border-radius: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 
+        0 4px 16px rgba(239, 68, 68, 0.25),
+        0 12px 48px rgba(239, 68, 68, 0.15);
+    }
+
+    .hero-icon svg {
+      width: 44px;
+      height: 44px;
+      stroke: white;
+      stroke-width: 2.5;
+      fill: none;
     }
 
     h1 {
@@ -247,9 +262,17 @@
     }
 
     .feature-icon {
-      font-size: 40px;
+      width: 56px;
+      height: 56px;
       margin-bottom: 20px;
-      display: block;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: linear-gradient(135deg, var(--gray-50), white);
+      border: 1px solid rgba(0, 0, 0, 0.06);
+      border-radius: 12px;
+      font-size: 28px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
     }
 
     .feature-card h3 {
@@ -467,7 +490,11 @@
     <!-- Hero -->
     <section class="hero">
       <div class="container">
-        <div class="hero-icon">🆘</div>
+        <div class="hero-icon">
+          <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M12 22C13.1 22 14 21.1 14 20H10C10 21.1 10.9 22 12 22ZM18 16V11C18 7.93 16.37 5.36 13.5 4.68V4C13.5 3.17 12.83 2.5 12 2.5C11.17 2.5 10.5 3.17 10.5 4V4.68C7.64 5.36 6 7.92 6 11V16L4 18V19H20V18L18 16Z" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+        </div>
         <h1>Warnen, wenn's <span class="gradient-text">zählt</span></h1>
         <p class="hero-subtitle">
           Stille Warnsignale für Nachbarschaft und private Gruppen. Mit Sprachmemos, 
