--- a/fairwayservice.html
+++ b/fairwayservice.html
@@ -242,17 +242,7 @@
     }
 
     .feature-icon {
-      width: 56px;
-      height: 56px;
-      margin-bottom: 20px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: linear-gradient(135deg, var(--gray-50), white);
-      border: 1px solid rgba(0, 0, 0, 0.06);
-      border-radius: 12px;
-      font-size: 28px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
+      display: none;
     }
 
     .feature-card h3 {
