--- a/fairwayservice/index.html
+++ b/fairwayservice/index.html
@@ -1,1 +1,515 @@
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+  <title>FairwayService – Golf Club Management</title>
+  <meta name="description" content="Die moderne Management-Plattform für Golfclubs. Mobile Bestellungen, Live-Updates und vollständiges Admin-Dashboard." />
 
+  <link rel="icon" type="image/png" href="/logo.png">
+  <meta name="theme-color" content="#ffffff">
+
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    :root {
+      --gray-50: #FAFAFA;
+      --gray-100: #F5F5F5;
+      --gray-200: #E5E5E5;
+      --gray-500: #737373;
+      --gray-600: #525252;
+      --gray-900: #171717;
+      --green-500: #16A34A;
+      --green-600: #15803D;
+    }
+
+    html { scroll-behavior: smooth; }
+
+    body {
+      font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
+      background: linear-gradient(180deg, #FAFAFA 0%, #FFFFFF 100%);
+      color: var(--gray-900);
+      line-height: 1.6;
+      -webkit-font-smoothing: antialiased;
+    }
+
+    .container {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 0 32px;
+    }
+
+    /* Header */
+    header {
+      position: sticky;
+      top: 0;
+      z-index: 100;
+      background: rgba(255, 255, 255, 0.85);
+      backdrop-filter: blur(20px);
+      border-bottom: 1px solid rgba(0, 0, 0, 0.06);
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.03);
+    }
+
+    .nav {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      height: 80px;
+    }
+
+    .brand {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      font-size: 18px;
+      font-weight: 700;
+      color: var(--gray-900);
+      text-decoration: none;
+    }
+
+    .nav-cta {
+      display: flex;
+      gap: 12px;
+    }
+
+    .btn {
+      padding: 10px 20px;
+      border-radius: 10px;
+      font-size: 14px;
+      font-weight: 600;
+      text-decoration: none;
+      transition: all 0.3s ease;
+    }
+
+    .btn-secondary {
+      color: var(--gray-600);
+      border: 1px solid rgba(0, 0, 0, 0.08);
+      background: white;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+    }
+
+    .btn-secondary:hover {
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+    }
+
+    .btn-primary {
+      background: linear-gradient(135deg, var(--green-500), var(--green-600));
+      color: white;
+      border: none;
+      box-shadow: 0 4px 12px rgba(22, 163, 74, 0.25);
+    }
+
+    .btn-primary:hover {
+      box-shadow: 0 6px 20px rgba(22, 163, 74, 0.35);
+      transform: translateY(-2px);
+    }
+
+    /* Hero with Banner */
+    .hero {
+      padding: 140px 0 100px;
+    }
+
+    .hero-banner {
+      width: 100%;
+      height: 400px;
+      margin-bottom: 64px;
+      background: linear-gradient(135deg, #16A34A 0%, #15803D 100%);
+      border-radius: 24px;
+      overflow: hidden;
+      box-shadow: 
+        0 8px 32px rgba(22, 163, 74, 0.2),
+        0 24px 64px rgba(22, 163, 74, 0.15);
+      position: relative;
+    }
+
+    .hero-banner img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .hero-banner::before {
+      content: '';
+      position: absolute;
+      inset: 0;
+      background: 
+        radial-gradient(circle at 30% 50%, rgba(255, 255, 255, 0.1) 0%, transparent 50%),
+        radial-gradient(circle at 70% 50%, rgba(255, 255, 255, 0.05) 0%, transparent 50%);
+    }
+
+    .hero-content {
+      text-align: center;
+    }
+
+    h1 {
+      font-size: clamp(48px, 7vw, 68px);
+      font-weight: 800;
+      line-height: 1.1;
+      letter-spacing: -0.03em;
+      margin-bottom: 24px;
+    }
+
+    .gradient-text {
+      background: linear-gradient(135deg, var(--green-500), var(--green-600));
+      -webkit-background-clip: text;
+      background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    .hero-subtitle {
+      font-size: 21px;
+      line-height: 1.7;
+      color: var(--gray-600);
+      max-width: 700px;
+      margin: 0 auto 32px;
+    }
+
+    .status-badge {
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      padding: 10px 18px;
+      background: linear-gradient(135deg, #FEF3C7, #FDE68A);
+      color: #D97706;
+      border: 1px solid rgba(217, 119, 6, 0.2);
+      border-radius: 12px;
+      font-size: 14px;
+      font-weight: 600;
+      box-shadow: 0 2px 8px rgba(217, 119, 6, 0.15);
+    }
+
+    /* Section */
+    section {
+      padding: 100px 0;
+    }
+
+    h2 {
+      font-size: 44px;
+      font-weight: 800;
+      letter-spacing: -0.03em;
+      margin-bottom: 24px;
+      text-align: center;
+    }
+
+    .section-intro {
+      font-size: 19px;
+      color: var(--gray-600);
+      max-width: 700px;
+      margin: 0 auto 64px;
+      text-align: center;
+      line-height: 1.7;
+    }
+
+    /* Features Grid */
+    .features-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+      gap: 32px;
+    }
+
+    .feature-card {
+      background: white;
+      border: 1px solid rgba(0, 0, 0, 0.06);
+      border-radius: 20px;
+      padding: 40px;
+      transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+      box-shadow: 
+        0 2px 8px rgba(0, 0, 0, 0.04),
+        0 12px 48px rgba(0, 0, 0, 0.05);
+    }
+
+    .feature-card:hover {
+      border-color: rgba(22, 163, 74, 0.2);
+      box-shadow: 
+        0 4px 16px rgba(0, 0, 0, 0.06),
+        0 24px 64px rgba(22, 163, 74, 0.12);
+      transform: translateY(-6px);
+    }
+
+    .feature-card h3 {
+      font-size: 22px;
+      font-weight: 700;
+      margin-bottom: 12px;
+    }
+
+    .feature-card p {
+      font-size: 16px;
+      line-height: 1.7;
+      color: var(--gray-600);
+      margin: 0;
+    }
+
+    /* Pricing */
+    .pricing-card {
+      max-width: 600px;
+      margin: 0 auto;
+      background: white;
+      border: 1px solid rgba(0, 0, 0, 0.06);
+      border-radius: 24px;
+      padding: 56px;
+      box-shadow: 
+        0 4px 16px rgba(0, 0, 0, 0.04),
+        0 16px 64px rgba(0, 0, 0, 0.06);
+      text-align: center;
+    }
+
+    .price {
+      font-size: 72px;
+      font-weight: 800;
+      letter-spacing: -0.04em;
+      margin: 24px 0;
+    }
+
+    .price-amount {
+      background: linear-gradient(135deg, var(--green-500), var(--green-600));
+      -webkit-background-clip: text;
+      background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    .price-period {
+      font-size: 24px;
+      color: var(--gray-500);
+      font-weight: 600;
+    }
+
+    .pricing-card ul {
+      list-style: none;
+      text-align: left;
+      margin: 32px 0;
+    }
+
+    .pricing-card li {
+      padding: 16px 0;
+      border-bottom: 1px solid rgba(0, 0, 0, 0.06);
+      font-size: 17px;
+      color: var(--gray-600);
+      display: flex;
+      align-items: center;
+      gap: 12px;
+    }
+
+    .pricing-card li:last-child {
+      border-bottom: none;
+    }
+
+    .pricing-card li::before {
+      content: '✓';
+      color: var(--green-500);
+      font-weight: bold;
+      font-size: 20px;
+    }
+
+    .pricing-tiers {
+      margin-top: 32px;
+      padding-top: 32px;
+      border-top: 1px solid rgba(0, 0, 0, 0.06);
+      text-align: left;
+    }
+
+    .cta-button {
+      display: inline-flex;
+      align-items: center;
+      gap: 12px;
+      padding: 18px 40px;
+      background: linear-gradient(135deg, var(--green-500), var(--green-600));
+      color: white;
+      text-decoration: none;
+      border-radius: 12px;
+      font-size: 17px;
+      font-weight: 700;
+      margin-top: 24px;
+      box-shadow: 
+        0 4px 16px rgba(22, 163, 74, 0.25),
+        0 8px 32px rgba(22, 163, 74, 0.15);
+      transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .cta-button:hover {
+      transform: translateY(-3px);
+      box-shadow: 
+        0 8px 24px rgba(22, 163, 74, 0.35),
+        0 16px 48px rgba(22, 163, 74, 0.25);
+    }
+
+    /* Footer */
+    footer {
+      border-top: 1px solid rgba(0, 0, 0, 0.06);
+      padding: 64px 0;
+      text-align: center;
+      background: white;
+    }
+
+    footer p {
+      font-size: 14px;
+      color: var(--gray-500);
+      margin-bottom: 12px;
+    }
+
+    footer a {
+      color: var(--gray-600);
+      text-decoration: none;
+      transition: color 0.2s ease;
+    }
+
+    footer a:hover {
+      color: var(--gray-900);
+    }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      .container { padding: 0 20px; }
+      .nav { height: 70px; }
+      .hero { padding: 100px 0 60px; }
+      .hero-banner { height: 300px; margin-bottom: 48px; }
+      h1 { font-size: 42px; }
+      section { padding: 60px 0; }
+      h2 { font-size: 36px; }
+      .features-grid { grid-template-columns: 1fr; }
+      .pricing-card { padding: 40px; }
+      .price { font-size: 56px; }
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <div class="container">
+      <nav class="nav">
+        <a href="/fairwayservice.html" class="brand">
+          <span>FairwayService</span>
+        </a>
+        <div class="nav-cta">
+          <a href="/" class="btn btn-secondary">← Portfolio</a>
+          <a href="mailto:christian@huebbedigital.com?subject=FairwayService Demo" class="btn btn-primary">Demo anfragen</a>
+        </div>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <!-- Hero -->
+    <section class="hero">
+      <div class="container">
+        <!-- Banner Image -->
+        <div class="hero-banner">
+          <img src="/fairwayservice/hero-banner.jpg" alt="FairwayService App Vorschau" />
+        </div>
+
+        <!-- Content -->
+        <div class="hero-content">
+          <h1><span class="gradient-text">FairwayService</span></h1>
+          <p class="hero-subtitle">
+            Die moderne Management-Plattform für Golfclubs. Von mobilen Bestellungen 
+            über Echtzeit-Updates bis zum vollständigen Admin-Dashboard.
+          </p>
+          <span class="status-badge">In Development · Launch Q2 2026</span>
+        </div>
+      </div>
+    </section>
+
+    <!-- Features -->
+    <section>
+      <div class="container">
+        <h2>Features</h2>
+        <p class="section-intro">
+          Alles was moderne Golfclubs brauchen – in einer eleganten App
+        </p>
+
+        <div class="features-grid">
+          <div class="feature-card">
+            <h3>Mobile Bestellungen</h3>
+            <p>Mitglieder bestellen Gastro & Shop-Artikel direkt vom Platz aus. Mit Lieferung zur Bahn oder Abholung.</p>
+          </div>
+
+          <div class="feature-card">
+            <h3>Push Notifications</h3>
+            <p>Echtzeit-Benachrichtigungen für neue Bestellungen, Status-Updates und wichtige Club-Informationen.</p>
+          </div>
+
+          <div class="feature-card">
+            <h3>Problem-Meldungen</h3>
+            <p>Mitglieder melden Probleme auf dem Platz direkt mit Foto und Standort. Admins sehen alles zentral.</p>
+          </div>
+
+          <div class="feature-card">
+            <h3>Admin Dashboard</h3>
+            <p>Übersichtliches Dashboard für Club-Betreiber mit Bestellverwaltung, Statistiken und Einstellungen.</p>
+          </div>
+
+          <div class="feature-card">
+            <h3>Club-Finder</h3>
+            <p>Interaktive Karte zeigt alle teilnehmenden Clubs im Umkreis mit Radius-Filter und Detailansicht.</p>
+          </div>
+
+          <div class="feature-card">
+            <h3>QR-Code System</h3>
+            <p>Sichere Authentifizierung am Club-Eingang via QR-Code mit temporären Zugangstokens.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Pricing -->
+    <section style="background: linear-gradient(180deg, white 0%, var(--gray-50) 100%);">
+      <div class="container">
+        <h2>Pricing</h2>
+        <p class="section-intro">
+          Transparente Preise ohne versteckte Kosten
+        </p>
+
+        <div class="pricing-card">
+          <h3 style="font-size: 20px; margin-bottom: 8px;">Flexibles Pricing</h3>
+          <div class="price">
+            <span class="price-amount">€49</span>
+            <span class="price-period">/Monat</span>
+          </div>
+          <p style="color: var(--gray-500); font-size: 15px; margin-bottom: 32px;">
+            Bis 500 Mitglieder
+          </p>
+
+          <ul>
+            <li>Einmalige Setup-Gebühr: €299</li>
+            <li>Alle Features inklusive</li>
+            <li>Push Notifications</li>
+            <li>Admin Dashboard</li>
+            <li>Email Support</li>
+            <li>Monatlich kündbar</li>
+          </ul>
+
+          <div class="pricing-tiers">
+            <p style="font-size: 15px; color: var(--gray-600); margin-bottom: 16px;">
+              <strong>Ab 500 Mitglieder:</strong>
+            </p>
+            <p style="font-size: 15px; color: var(--gray-600); margin: 0;">
+              500-1000 Mitglieder: €79/Monat<br>
+              1000+ Mitglieder: Individuelle Preise
+            </p>
+          </div>
+
+          <a href="mailto:christian@huebbedigital.com?subject=FairwayService Demo" class="cta-button">
+            <span>Demo anfragen</span>
+            <span>→</span>
+          </a>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div class="container">
+      <p>© 2026 Christian Hübbe</p>
+      <p>
+        <a href="/imprint.html">Impressum</a> · 
+        <a href="/privacy.html">Datenschutz</a>
+      </p>
+    </div>
+  </footer>
+</body>
+</html>
