--- a/notalone/index.html
+++ b/notalone/index.html
@@ -632,9 +632,9 @@
     <div class="container">
       <p>© 2026 Christian Hübbe</p>
       <p>
-        <a href="/notalone/unterstuetzen.html">Projekt unterstützen</a> · 
-        <a href="/notalone/fair-community.html">Fair-Use</a> · 
-        <a href="/notalone/investoren.html">Für Investor:innen</a>
+        <a href="unterstuetzen.html">Projekt unterstützen</a> · 
+        <a href="fair-community.html">Fair-Use</a> · 
+        <a href="investoren.html">Für Investor:innen</a>
       </p>
       <p>
         <a href="/imprint.html">Impressum</a> · 
