--- a/imprint.html
+++ b/imprint.html
@@ -187,8 +187,8 @@
         <p>
           Christian Hübbe<br>
           Einzelunternehmer<br>
-          Mozartstraße 20<br>
-          61203 Reichelsheim<br>
+          Kurt-Schumacher-Straße 76<br>
+          67663 Kaiserslautern<br>
           Deutschland
         </p>
 
@@ -206,8 +206,8 @@
         <h2>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</h2>
         <p>
           Christian Hübbe<br>
-          Mozartstraße 20<br>
-          61203 Reichelsheim
+          Kurt-Schumacher-Straße 76<br>
+          67663 Kaiserslautern
         </p>
 
         <h2>Haftungsausschluss</h2>
