--- a/index.html
+++ b/index.html
@@ -75,10 +75,20 @@
     .brand {
       font-size: 18px;
       font-weight: 700;
-      color: var(--gray-900);
       text-decoration: none;
       letter-spacing: -0.02em;
       transition: transform 0.2s ease;
+    }
+
+    .brand-text {
+      color: var(--gray-900);
+    }
+
+    .brand-gradient {
+      background: linear-gradient(135deg, var(--blue-500) 0%, var(--purple-600) 100%);
+      -webkit-background-clip: text;
+      background-clip: text;
+      -webkit-text-fill-color: transparent;
     }
 
     .brand:hover {
@@ -459,7 +469,10 @@
   <header>
     <div class="container">
       <nav class="nav">
-        <a href="/" class="brand">Huebbe Digital</a>
+        <a href="/" class="brand">
+          <span class="brand-text">Huebbe</span>
+          <span class="brand-gradient">Digital</span>
+        </a>
         <ul>
           <li><a href="#work">Work</a></li>
           <li><a href="#about">About</a></li>
