--- a/imprint.html
+++ b/imprint.html
@@ -204,11 +204,12 @@
         </p>
 
         <h2>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</h2>
-        <p>
-          Christian Hübbe<br>
-          Kurt-Schumacher-Straße 76<br>
-          67663 Kaiserslautern
-        </p>
+<p>
+  Christian Hübbe<br>
+  c/o flexdienst – #11298<br>
+  Kurt-Schumacher-Straße 76<br>
+  67663 Kaiserslautern
+</p>
 
         <h2>Haftungsausschluss</h2>
         
