--- a/privacy.html
+++ b/privacy.html
@@ -44,10 +44,11 @@
     <p>Verantwortlich für die Datenverarbeitung auf dieser Website und in unseren Apps ist:</p>
     <p>
       <strong>Christian Hübbe</strong><br>
-      Kurt-Schumacher-Straße 76<br>
-      67663 Kaiserslautern<br>
+     c/o flexdienst – #11298<br>
+  Kurt-Schumacher-Straße 76<br>
+  67663 Kaiserslautern
       Deutschland
-    </p>
+</p>
     <p>E-Mail: <a href="mailto:christian@huebbedigital.com">christian@huebbedigital.com</a></p>
 
     <h2>2. Geltungsbereich</h2>
