--- a/imprint.html
+++ b/imprint.html
@@ -187,6 +187,7 @@
         <p>
           Christian Hübbe<br>
           Einzelunternehmer<br>
+            c/o flexdienst – #11298<br>
           Kurt-Schumacher-Straße 76<br>
           67663 Kaiserslautern<br>
           Deutschland
