--- a/imprint.html
+++ b/imprint.html
@@ -195,7 +195,7 @@
 
         <h2>Kontakt</h2>
         <p>
-          E-Mail: <a href="mailto:christian@huebbedigital.com">christian@huebbedigital.com</a>
+          E-Mail: <a href="mailto:contact@huebbedigital.com">contact@huebbedigital.com</a>
         </p>
 
         <h2>Umsatzsteuer-ID</h2>
