--- a/privacy.html
+++ b/privacy.html
@@ -49,7 +49,7 @@
   67663 Kaiserslautern
       Deutschland
 </p>
-    <p>E-Mail: <a href="mailto:christian@huebbedigital.com">christian@huebbedigital.com</a></p>
+    <p>E-Mail: <a href="mailto:contact@huebbedigital.com">contact@huebbedigital.com</a></p>
 
     <h2>2. Geltungsbereich</h2>
     <p>Diese Datenschutzerklärung gilt für:</p>
@@ -361,7 +361,7 @@
     <h2>13. Kontakt zum Datenschutz</h2>
     <p>Bei Fragen können Sie sich jederzeit an uns wenden:</p>
     <p>
-      <strong>E-Mail:</strong> <a href="mailto:christian@huebbedigital.com">christian@huebbedigital.com</a><br>
+      <strong>E-Mail:</strong> <a href="mailto:contact@huebbedigital.com">contact@huebbedigital.com</a><br>
       <strong>Postanschrift:</strong> Kurt-Schumacher-Straße 76, 67663 Kaiserslautern
     </p>
     <p>Wir antworten innerhalb eines Monats.</p>
