--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@ Design und Development bis zum erfolgreichen Launch.
 Hast du ein Projekt im Kopf? Lass uns darüber sprechen, 
 wie ich dir helfen kann.
 </p>
-<a href="mailto:christian@huebbedigital.com" class="cta-button">
+<a href="mailto:contact@huebbedigital.com" class="cta-button">
 <span>Get in touch</span>
 <span>→</span>
 </a>
