--- a/fairwayservice.html
+++ b/fairwayservice.html
@@ -397,7 +397,7 @@
         </a>
         <div class="nav-cta">
           <a href="/" class="btn btn-secondary">← Portfolio</a>
-          <a href="mailto:christian@huebbedigital.com?subject=FairwayService Demo" class="btn btn-primary">Demo anfragen</a>
+          <a href="mailto:contact@huebbedigital.com?subject=FairwayService Demo" class="btn btn-primary">Demo anfragen</a>
         </div>
       </nav>
     </div>
@@ -503,7 +503,7 @@
             </p>
           </div>
 
-          <a href="mailto:christian@huebbedigital.com?subject=FairwayService Demo" class="cta-button">
+          <a href="mailto:contact@huebbedigital.com?subject=FairwayService Demo" class="cta-button">
             <span>Demo anfragen</span>
             <span>→</span>
           </a>
