--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@ wie ich dir helfen kann.
 
 <footer>
 <div class="container">
-<p>© 2026 Christian Hübbe</p>
+<p>© 2026 HuebbeDigital</p>
 <p>
 <a href="/imprint.html">Impressum</a> · 
 <a href="/privacy.html">Datenschutz</a>
