--- a/notalone/index.html
+++ b/notalone/index.html
@@ -630,7 +630,7 @@
 
   <footer>
     <div class="container">
-      <p>© 2026 Christian Hübbe</p>
+      <p>© 2026 HuebbeDigital</p>
       <p>
         <a href="unterstuetzen.html">Projekt unterstützen</a> · 
         <a href="fair-community.html">Fair-Use</a> · 
