--- a/notalone/investoren.html
+++ b/notalone/investoren.html
@@ -520,7 +520,7 @@
 
   <footer>
     <div class="container">
-      <p>© 2026 Christian Hübbe</p>
+      <p>© 2026 HuebbeDigital</p>
       <p>
         <a href="/imprint.html">Impressum</a> · 
         <a href="/privacy.html">Datenschutz</a>
